force-app/main/default/objects/Behavior_Snapshot__c/Behavior_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Behavior Snapshot</label>
    <nameField>
        <displayFormat>SNAP-{0000}</displayFormat>
        <label>Snapshot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Behavior Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>