force-app/main/default/objects/Behavior_Snapshot__c/fields/Impact_Score__c.field-meta.xml
<CustomField>
    <fullName>Impact_Score__c</fullName>
    <description>The calculated impact score at snapshot time</description>
    <label>Impact Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>