force-app/main/default/objects/Behavior_Snapshot__c/fields/Metric_Name__c.field-meta.xml
<CustomField>
    <fullName>Metric_Name__c</fullName>
    <description>The name of the metric being tracked (e.g., Stale_Case_Count)</description>
    <label>Metric Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>