force-app/main/default/objects/Behavior_Snapshot__c/fields/Related_Pain_Point__c.field-meta.xml
<CustomField>
    <fullName>Related_Pain_Point__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Pain Point this snapshot is related to</description>
    <label>Related Pain Point</label>
    <referenceTo>Identified_Pain_Point__c</referenceTo>
    <relationshipLabel>Behavior Snapshots</relationshipLabel>
    <relationshipName>Behavior_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>