force-app/main/default/objects/Behavior_Snapshot__c/fields/Snapshot_Date__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Date__c</fullName>
    <description>The date when this snapshot was captured</description>
    <label>Snapshot Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>