force-app/main/default/objects/Behavior_Snapshot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Related_Pain_Point__c</columns>
    <columns>Metric_Name__c</columns>
    <columns>Record_Count__c</columns>
    <columns>Impact_Score__c</columns>
    <columns>Snapshot_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>